# PhotoOfTheDay

./: CMakeLists.txt  PhotoOfTheDayPlasmoid.desktop  Plasma.cpp  Plasma.h  README  main.py  ngprovider.cpp  ngprovider.desktop  ngprovider.h
